[HK] fixes catalog tests
Signed-off-by: Frank Gasdorf <fgdrf@users.sourceforge.net>