@@ -11,11 +11,11 @@
 package org.locationtech.udig.catalog;
 
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertSame;
 import static org.junit.Assert.fail;
 
 import java.io.File;
+import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
 
@@ -133,57 +133,64 @@ public class URLUtilsTest {
         assertSame(url, result);
     }
 
-    @Ignore
+    @Test
+    @Ignore("expected:<file:/[..]/bar> but was:<file:/[C:/Users/Razer/foo]/bar>")
+    public void testConstructRaleativeBarToBork() throws MalformedURLException {
+        File home = new File(System.getProperty("user.home"));
+//        URL expected = new File(new File(home, "foo"), "bar").toURI().toURL();
+        File reference = new File(new File(new File(home, "foo"), "bork"), "dooda");
+        assertEquals("file:/../bar", URLUtils.constructURL(reference, "file:/../bar").toString());
+    }
+
+    @Test
+    public void testConstructUrl() throws MalformedURLException {
+        File home = new File(System.getProperty("user.home"));
+        File reference = new File(new File(new File(home, "foo"), "bork"), "dooda");
+        URL expected = new URL("http://someurl.com");
+        assertEquals(expected.toString(), URLUtils.constructURL(reference, "http://someurl.com").toString());
+    }
+
+    @Test
+    public void testConstructURLrelativePath() throws IOException {
+        File home = new File(System.getProperty("user.home"));
+        File reference = new File(new File(new File(home, "foo"), "bork"), "dooda");
+        File file = new File(".");
+        String path = file.getCanonicalPath().replace('\\', '/');
+        URL expected = new URL("file:/" + path);
+        assertEquals(expected.toString(), URLUtils.constructURL(reference, "file:/" + path).toString());
+    }
+
     @Test
     public void testConstructURL() throws Exception {
-        File home = new File(System.getProperty("user.home"));
+        Assume.assumeTrue(SystemUtils.IS_OS_WINDOWS);
 
-        URL expected = new File(new File(home, "foo"), "bar").toURI().toURL();
-        File reference = new File(new File(new File(home, "foo"), "bork"), "dooda");
+        URL expected = new File("C:/foo/bar").toURL(); //$NON-NLS-1$
+        File reference = new File("C:/foo/bork/dooda"); //$NON-NLS-1$
 
-        URL result;
-
-        result = URLUtils.constructURL(reference, "file:/../bar");
-        assertEquals("file:/../bar", result.toString());
-
-        File file = new File(".");
-        expected = new URL("http://someurl.com");
-        result = URLUtils.constructURL(reference, "http://someurl.com");
+        expected = new File("C:/foo/bork").toURL();
+        URL result = URLUtils.constructURL(reference, "file:/./");
         assertEquals(expected.toString(), result.toString());
 
-        String path = file.getCanonicalPath().replace('\\', '/');
-        expected = new URL("file:/" + path);
-        result = URLUtils.constructURL(reference, "file:/" + path);
-
+        expected = new File("C:/foo/bork/BLEEP").toURL();
+        result = URLUtils.constructURL(reference, "file:/BLEEP");
         assertEquals(expected.toString(), result.toString());
 
-        String os = System.getProperty("os.name");
-        if (os.toUpperCase().contains("WINDOWS")) {
-            expected = new File("C:/foo/bar").toURL(); //$NON-NLS-1$
-            reference = new File("C:/foo/bork/dooda"); //$NON-NLS-1$
+        expected = new URL("file:/C:/foo/bar#hi");
+        result = URLUtils.constructURL(reference, "file:/C:/foo/bar#hi");
+        assertEquals(expected.toString(), result.toString());
 
-            expected = new File("C:/foo/bork").toURL();
-            result = URLUtils.constructURL(reference, "file:/./");
-            assertEquals(expected.toString(), result.toString());
+        expected = new URL("file:/D:/foo/bar#hi");
+        result = URLUtils.constructURL(reference, "file:/D:/foo/bar#hi");
+        assertEquals(expected.toString(), result.toString());
+    }
 
-            expected = new File("C:/foo/bork/BLEEP").toURL();
-            result = URLUtils.constructURL(reference, "file:/BLEEP");
-            assertEquals(expected.toString(), result.toString());
-
-            expected = new URL("file:/C:/foo/bar#hi");
-            result = URLUtils.constructURL(reference, "file:/C:/foo/bar#hi");
-            assertEquals(expected.toString(), result.toString());
-
-            expected = new URL("file:/D:/foo/bar#hi");
-            result = URLUtils.constructURL(reference, "file:/D:/foo/bar#hi");
-            assertEquals(expected.toString(), result.toString());
-
-            file = new File("E:/Rahul/d a t a/uDigSampleData/bc_border.shp");
-            result = URLUtils.fileToURL(file);
-            File file2 = URLUtils.urlToFile(result);
-            assertEquals(file, file2);
-        }
-
+    @Test
+    public void testUrl2FileAndBackWithSpacesInPath() {
+        Assume.assumeTrue(SystemUtils.IS_OS_WINDOWS);
+        File file = new File("E:/Rahul/d a t a/uDigSampleData/bc_border.shp");
+        URL result = URLUtils.fileToURL(file);
+        File file2 = URLUtils.urlToFile(result);
+        assertEquals(file, file2);
     }
 
 }
